# ktdsMVP

./: README.md  SamsungReview_check.xlsx  app.py  defect.jsonl  defect_classification.py  main.py  pyproject.toml  requirements.txt  streamlit.sh
.github/workflows/: main_hoon-web-mvp.yml
